Fix scroll on mobile (#543)

--- a/client/app/views/styles/_responsive.styl
+++ b/client/app/views/styles/_responsive.styl
@@ -33,6 +33,8 @@
     .container
         position absolute
         width 100%
+        height 100%
+        overflow auto
         margin-left 0
         padding 0
 
